# rame

./: .gitignore  Cargo.toml
src/: error.rs  image.rs  lib.rs  tensor.rs
src/artifact/: error.rs  mod.rs  root.rs
src/layout/: geometry.rs  mod.rs  model.rs  result.rs
src/models/: error.rs  mod.rs
src/models/pp_doclayout/plus/: decoder.rs  labels.rs  mod.rs  model.rs
src/preprocess/: error.rs  mod.rs  pipeline.rs
src/preprocess/vision/: mod.rs  ops.rs  output.rs
src/preprocess/vision/opencv/: error.rs  mod.rs  normalize_and_permute.rs  resize.rs  state.rs
src/runtime/: architecture.rs  artifact.rs  builder.rs  decoder.rs  mod.rs  pipeline.rs  processor.rs
src/session/: backend.rs  error.rs  infer_session.rs  mod.rs
src/session/ort/: config.rs  error.rs  mod.rs  session.rs
src/sources/: error.rs  huggingface.rs  mod.rs  model_source.rs  resolved.rs
tests/: ort_session.rs
tests/fixtures/: identity.onnx
